viewport resize fix on mobile

--- a/src/pcss/partials/components/header.pcss
+++ b/src/pcss/partials/components/header.pcss
@@ -7,8 +7,10 @@
   z-index: 9999;
   backface-visibility: hidden;
 
-  transform: translateY(-100%);
-
+/*transform: translateY(-100%);
+  transition-property: transform;
+  transition-duration: 0.35s;
+  transition-timing-function: easeInOut;*/
 
   &.js-slideDown {
     transform: translateY(0%);
